--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "climate-sync",
   "version": "1.0.0",
   "description": "A comprehensive climate monitoring and farming assistance application",
-  "main": "dist/server.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node dist/server.js",
-    "start:js": "node server.js",
-    "dev": "nodemon --exec ts-node server.ts",
-    "dev:js": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "start:ts": "node dist/server.js",
+    "dev:ts": "nodemon --exec ts-node server.ts",
     "build": "tsc",
     "build-ts": "tsc",
     "build-ml": "tsc --project tsconfig.json",
